--- a/style.css
+++ b/style.css
@@ -1,37 +1,61 @@
 * {
     margin: 0;
 }
-.container {
+.container .cores{
+    width: 100%;
     height: 100vh;
+    position: absolute;
     display: flex;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .title-project{
-    width: 20%;
-    height: 0px;
+    width: 100%;
+    height: 0;
+    position: relative;
+    z-index: 1;
     text-align: center;
-    background-color: black;
-    position: fixed;
-    top: px;
-    left: 40%;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 24px;
+    font-size: 50px;
 }
-.colors {
+.cores .colors {
     display: flex;
     width: 100%;
     /*border: 1px solid black;*/
     align-items: center;
     justify-content: center;
 }
-.btn {
-    width: 100px;
-    height: 100px;
-    position: fixed;
-    transition-duration: 1ms;
+.btn{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+}
+input {
+    width: 120px;
+    height: 120px;
+    position: relative;
     border-radius: 50%;
-    top: 500px;
-    left: 46%;
+    top: 75vh;
     cursor: pointer;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+@media (max-width: 500px){
+    .container .cores{
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+    }
+    .title-project p{
+        text-align: center;
+        font-size: 30px;
+    }
+    .container .colors{
+        width: 100vw;
+        height: calc(100vh / 5);
+        display: flex;
+        font-size: 20px;
+    }
+  
 }
